--- a/example/public/index.html
+++ b/example/public/index.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  / Route Html page
+<body class="index-page">
+  <h1>HTTP server in cpp</h1>
+
+  <a href="./home">go to home page</a>
 </body>
 </html>
